# IncusDataCCourse

./: .README.md.swp  .vimrc  Doxyfile  Makefile  Makefile.000  README.md  a.s  dukep  macros  runmain  serve  setenv.bat  tstcli  tstep
.vim/: init.vim
cgi/cmaketpl/: CMakeLists.txt
cgi/cmaketpl/res/: platform.h.in
cgi/cmaketpl/src/: main.c  main.h
cgi/incus/cadv/2bin/src/: .main.c.swp  main.c  tobin.c  tobin.h
cgi/incus/cadv/2binsolution/res/: platform.c
cgi/incus/cadv/2binsolution/src/: main.c
cgi/incus/cadv/2darritr/src/: main.c
cgi/incus/cadv/addr_arr/src/: main.c
cgi/incus/cadv/alignof/src/: main.c
cgi/incus/cadv/arrtype/: CMakeLists.txt
cgi/incus/cadv/arrtype/src/: main.c  main.h
cgi/incus/cadv/base_pointer/: README.md
cgi/incus/cadv/debugging/: Makefile  Makefile.000  guid.cmd  setenv.bat
cgi/incus/cadv/doxygen/: Doxyfile  Makefile  README.md
cgi/incus/cadv/fn_arg_stack/: Makefile.bcc
cgi/incus/cadv/intptr_t/: Makefile
cgi/incus/cadv/ndebug/: Makefile
cgi/incus/cadv/ptr/: Makefile
cgi/incus/cadv/stack/: Makefile
cgi/incus/cadv/trigraphs/: Makefile
cgi/incus/cadv/tstendian/: test
cgi/incus/cppbeg/c_and_cpp/: Makefile  README.md  setenv.bat
cgi/incus/cppbeg/class/: asdf
cgi/incus/cppbeg/decltype/: uuid.cmd
cgi/incus/cppbeg/headers/: README.md
cgi/incus/cppbeg/hello/: Makefile
cgi/incus/cppbeg/io_operator_overloading/: uuid.sh
cgi/incus/cppbeg/multimake/: Makefile  buildlibs  lsso
cgi/incus/cppbeg/namespace_identifier/: Makefile
cgi/incus/cppbeg/ndebug/: Makefile
cgi/incus/cppbeg/order_of_evaluation/: DoxyFile
cgi/incus/cppbeg/tpl/: uuid.cmd  uuid.sh
cgi/tpl/src/: main.c
cgi/tplmixed/src/: asdf.h  main.cpp  zxcv.c
db/: a.db
doc/whiteboard/: 20200624.html
dox/html/: Makefile_source.html  README_8md_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  files.js  graph_legend.html  index.html  main_8c.html  main_8c__incl.md5  main_8c_source.html  navtreedata.js  navtreeindex0.js
res/dox/: html_footer.html  html_header.html  pan.css
scr/: dukep.js  fsutils.js  lib.js  main.js  midi.js
scr/caca/: caca.js
scr/cli/: .main.js.swp  main.js
scr/curl/: main.js
scr/dukglue/: dukglue.js
scr/ep/: .srvlog.js.swp  main.js  srvlog.js  srvloghtml.js
scr/lib/: caca.js  db.js  html.js  http.js  raw.js  test.js
scr/mod/: main.js
scr/mod/wid/: anchor.js  button.js  container.js  form.js  jumbotron.js  node.js  table.js  text.js
scr/ncurses/: main.js
scr/pthread/: pthread.js
scr/srv/: init.js
sql/: schema.sql  startup.sql
src/: b.c  b.h  main.c  main.c.000  main.c.orig
src/cli/: cli.c  cli.h
src/ctemplate/: ctemplate.c
src/db/: dbtest.c  dbtest.h
src/duktape/: caca.c  caca.h  curl.c  curl.h  dukglue.cpp  dukglue.h  exec.c  exec.h  libc.c  libc.h  log.h  ncurses.c  ncurses.h  pthread.c  pthread.h  register.c  register.h  sqlite.c  sqlite.h
src/ea/: ga.c  ga.h
src/incus/cadv/: example01.c  example02.c  example03.c  example04.c  example04.h  prg000.c  prg000.h
src/macros/: logging.h
src/srv/: .srv.c.swp  srv.c  srv.h
src/srv/hdl/: duk.c  duk.h  main.c  main.h
src/srv/init/: init.c  init.h
src/tpl/: mus.c  mus.h  tpl.c  tpl.h
tmp/htop-2.2.0/: config.h
tools/: astyle  cmatrix  htop  tmux
tpl/: test_args.html  test_loop.html
web/: .index.html.swp  index.html
(+222 files in other folders)
